WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277527
Begin adding https navigation failure browsing warning
https://bugs.webkit.org/show_bug.cgi?id=277527
Summary
Begin adding https navigation failure browsing warning
Matthew Finkel
Reported
2024-08-01 22:01:43 PDT
Begin adding https navigation failure browsing warning
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-01 22:01:55 PDT
<
rdar://problem/133035983
>
Matthew Finkel
Comment 2
2024-08-01 22:25:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31627
EWS
Comment 3
2024-08-02 14:00:18 PDT
Committed
281773@main
(743aecc8bcfe): <
https://commits.webkit.org/281773@main
> Reviewed commits have been landed. Closing PR #31627 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug