[cocoa] Begin adding https navigation failure browsing warning https://bugs.webkit.org/show_bug.cgi?id=277527 rdar://problem/133035983

Reviewed by NOBODY (OOPS!).

Add a new WarningType that will distinguish between the different supported
warnings. Currently the supported warnings are SafeBrowsing and
HTTPSNavigationFailure. HTTPSNavigationFailure is the warning associated with
the https-by-default/HTTPSOnly load failure.

The current HTTPSNavigationFailure warning uses the same buttons, color, and
image as the SafeBrowsing warning. These will be changed in subsequent patches.

The SafeBrowsing warning is covered by existing tests. The
HTTPSNavigationFailure warning will be covered by tests in a later patch.

* Source/WebCore/en.lproj/Localizable.strings:
* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _showWarningViewWithURL:title:warning:detailsWithLinks:completionHandler:]):
* Source/WebKit/UIProcess/BrowsingWarning.h:
(WebKit::BrowsingWarning::create):
(WebKit::BrowsingWarning::type const):
* Source/WebKit/UIProcess/Cocoa/BrowsingWarningCocoa.mm:
(WebKit::browsingWarningTitleText):
(WebKit::browsingWarningText):
(WebKit::browsingDetailsText):
(WebKit::BrowsingWarning::BrowsingWarning):
(WebKit::browsingTitleText): Deleted.
* Source/WebKit/UIProcess/Cocoa/_WKWarningView.mm:
(backgroundColorForWarningType):
(-[_WKWarningView initWithFrame:browsingWarning:completionHandler:]):