Source/WebKit/UIProcess/Cocoa/BrowsingWarningCocoa.mm
@@ -106,7 +106,7 @@ static NSURL *malwareDetailsURL(const URL& url, SSBServiceLookupResult *result)
     return URL({ }, makeString(malwareDetailsBase(result), "&site="_s, url.host(), "&hl="_s, defaultLanguage()));
 }
 
-static NSString *browsingTitleText(SSBServiceLookupResult *result)
+static NSString *browsingWarningTitleText(SSBServiceLookupResult *result)
 {
     if (result.isPhishing)
         return WEB_UI_NSSTRING(@"Deceptive Website Warning", "Phishing warning title");
@@ -114,6 +114,17 @@ static NSString *browsingTitleText(SSBServiceLookupResult *result)
         return WEB_UI_NSSTRING(@"Malware Website Warning", "Malware warning title");
     ASSERT(result.isUnwantedSoftware);
     return WEB_UI_NSSTRING(@"Website With Harmful Software Warning", "Unwanted software warning title");
+}
+
+static NSString *browsingWarningTitleText(BrowsingWarning::WarningType type)
+{
+    switch (type) {
+    case BrowsingWarning::WarningType::HTTPSNavigationFailure:
+        return WEB_UI_NSSTRING(@"This Connection Is Not Secure", "Not Secure Connection warning page title");
+    case BrowsingWarning::WarningType::SafeBrowsing:
+    }
+    ASSERT_NOT_REACHED();
+    return nil;
 }
 
 static NSString *browsingWarningText(SSBServiceLookupResult *result)
@@ -125,6 +136,17 @@ static NSString *browsingWarningText(SSBServiceLookupResult *result)
 
     ASSERT(result.isUnwantedSoftware);
     return WEB_UI_NSSTRING(@"This website may try to trick you into installing software that harms your browsing experience, like changing your settings without your permission or showing you unwanted ads. Once installed, it may be difficult to remove.", "Unwanted software warning");
+}
+
+static NSString *browsingWarningText(BrowsingWarning::WarningType type)
+{
+    switch (type) {
+    case BrowsingWarning::WarningType::HTTPSNavigationFailure:
+        return WEB_UI_NSSTRING(@"This website does not support connecting securely. The information you see and enter on this website, including credit cards, phone numbers, and passwords, can be read and altered by other people.", "Not Secure Connection warning text");
+    case BrowsingWarning::WarningType::SafeBrowsing:
+    }
+    ASSERT_NOT_REACHED();
+    return nil;
 }
 
 static NSMutableAttributedString *browsingDetailsText(const URL& url, SSBServiceLookupResult *result)
@@ -164,21 +186,45 @@ static NSMutableAttributedString *browsingDetailsText(const URL& url, SSBService
     return malwareOrUnwantedSoftwareDetails(WEB_UI_NSSTRING(@"Warnings are shown for websites where harmful software has been detected. You can check %the-status-of-site% on the %safeBrowsingProvider% diagnostic page.", "Unwanted software warning description"), @"%the-status-of-site%", false);
 }
 
+static NSMutableAttributedString *browsingDetailsText(const URL& url, BrowsingWarning::WarningType type)
+{
+    switch (type) {
+    case BrowsingWarning::WarningType::HTTPSNavigationFailure:
+        return nil;
+    case BrowsingWarning::WarningType::SafeBrowsing:
+    }
+    ASSERT_NOT_REACHED();
+    return nil;
+}
+
 BrowsingWarning::BrowsingWarning(const URL& url, bool forMainFrameNavigation, SSBServiceLookupResult *result)
     : m_url(url)
-    , m_title(browsingTitleText(result))
+    , m_title(browsingWarningTitleText(result))
     , m_warning(browsingWarningText(result))
     , m_forMainFrameNavigation(forMainFrameNavigation)
     , m_details(browsingDetailsText(url, result))
+    , m_type(WarningType::SafeBrowsing)
 {
 }
+
+BrowsingWarning::BrowsingWarning(const URL& url, bool forMainFrameNavigation, WarningType type)
+    : m_url(url)
+    , m_title(browsingWarningTitleText(type))
+    , m_warning(browsingWarningText(type))
+    , m_forMainFrameNavigation(forMainFrameNavigation)
+    , m_details(browsingDetailsText(url, type))
+    , m_type(type)
+{
+}
+
 #endif
 
-BrowsingWarning::BrowsingWarning(URL&& url, String&& title, String&& warning, RetainPtr<NSAttributedString>&& details)
+BrowsingWarning::BrowsingWarning(URL&& url, String&& title, String&& warning, RetainPtr<NSAttributedString>&& details, WarningType type)
     : m_url(WTFMove(url))
     , m_title(WTFMove(title))
     , m_warning(WTFMove(warning))
     , m_details(WTFMove(details))
+    , m_type(type)
 {
 }
 
